# flecs_raylib_template

./: .clang-format  .gitmodules  CMakeLists.txt
src/: main.c
